fixed z-index of mobile navbar and section titles

--- a/public/jake-lewis-website1.css
+++ b/public/jake-lewis-website1.css
@@ -687,7 +687,7 @@ nav ul li {
   width: 100%;
   margin: 0px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
 }
 
 @media screen and (max-width: 992px) {
@@ -779,6 +779,11 @@ nav ul li {
 
 mobileNav {
   position: fixed;
+}
+
+.titleText {
+  font-size: 2.92rem;
+  line-height: 110%;
 }
 
 .subTitle {
